--- a/glendening-effect.html
+++ b/glendening-effect.html
@@ -128,7 +128,7 @@
   <!-- Article Body -->
     <p class="dateline">ANNAPOLIS, Maryland &mdash; For two decades Maryland governors have followed a tough-on-crime policy that denied parole to youths who had been sentenced to life. Gov. Larry Hogan is now softening that policy, allowing parole for three inmates convicted as juveniles.</p><br><br>
 
-    <p>Hogan’s shift comes in the face of U.S. Supreme Court rulings that sentencing a minor to life without parole was cruel and unusual punishment. The Democratic governor who initiated the policy of denying parole to anyone sentenced to life now calls it “a very bad” mistake. And Hogan, R, is facing a federal lawsuit brought by the ACLU charging that the practice is unconstitutional. </p><br><br>
+    <p>Hogan’s shift comes in the face of U.S. Supreme Court rulings that sentencing a minor to life without parole was cruel and unusual punishment. The Democratic governor who initiated the policy of denying parole to anyone sentenced to life now calls it “a very bad mistake." And Hogan, R, is facing a federal lawsuit brought by the ACLU charging that the practice is unconstitutional. </p><br><br>
 
     <p>Juveniles in Maryland had been receiving life sentences with the possibility of parole as early as 11 years into the sentence. But because four consecutive governors had refused to release them, today more than 300 such inmates — some now in their 50s and 60s — sit waiting to see what Hogan’s decision on the three paroles means for them.</p><br><br>
 
@@ -212,9 +212,9 @@
 
     <p>Gov. Robert Ehrlich, R, commuted two juvenile lifers and paroled none.</p><br><br>
 
-    <p>During Democrat Gov. Martin O’Malley’s eight years in office, he commuted the sentence of one juvenile who had been given a life terms; he did not parole any lifers.</p><br><br>
+    <p>During Democrat Gov. Martin O’Malley’s eight years in office, he commuted the sentence of one juvenile who had been given a life term. He did not parole any lifers.</p><br><br>
 
-    <p>Hogan has commuted the sentences of four juveniles as of late October before allowing the parole of the three juvenile lifers in November.</p><br><br>
+    <p>Hogan had commuted the sentences of four juveniles as of late October before allowing the parole of the three juvenile lifers in November.</p><br><br>
 
     <p>Maryland legislators have tried to remove the governor’s hand from the state’s parole process in recent years.</p><br><br>
 
@@ -231,6 +231,19 @@
     <p>In 2018, Hogan signed an executive order addressing juvenile lifers specifically, requiring that the governor weigh the same elements as the Maryland Parole Commission when considering parole, as well as the inmate’s age at the time of the offense and any signs of maturity or transformative rehabilitation.</p><br><br>
 
     <p>Attempts to find and contact attorneys, family members of victims, and parolees have not been successful, or individuals have declined to comment.</p><br><br>
+
+    <div class="infobox">
+      <span style="text-decoration: underline;">A governor can grant various forms of release or clemency to inmates.</span><br><br>
+
+      <span style="color:#FFDA94;font-weight: bold;">Parole</span> is recommended to the governor by the Maryland Parole Commission. After a hearing and risk assessment, the commission may send a parole recommendation to the Office of the Governor. Once received, the governor has 180 days to confirm, allow its approval without a signature, or deny it. If a prisoner is released to the community, they are under the supervision of a parole officer. Violation of the terms of an individuals’ parole can lead to reincarceration.<br><br>
+
+      <span style="color:#FFDA94;font-weight: bold;">Medical parole</span> is a release condition that occurs when an incarcerated individual is so chronically ill that they are no longer considered a danger to others. At this point, they are released to the care of a family member, hospital or hospice facility, and are returned to prison should their health recover.<br><br>
+
+      <span style="color:#FFDA94;font-weight: bold;">Commutation</span> is a form of clemency granted by the governor that results in a changed or shortened sentence. In commuting a sentence, the governor has some discretion over when and under what conditions a prisoner is released, unlike with paroles.<br><br>
+
+      <span style="color:#FFDA94;font-weight: bold;">Pardon</span> is a process, following an application, of executive clemency under which the governor absolves the grantee of guilt for a crime and exempts them from penalties for those crimes. Formerly convicted individuals can apply to have portions of their criminal record expunged and restore some of their rights.
+
+    </div><br><br>
 
 
 
