--- a/lomax.html
+++ b/lomax.html
@@ -151,7 +151,7 @@
 
     <p>She wanted to understand why the killer did what he did. “She had no idea why the individuals had murdered her son, but she took a leap of faith and tried to find out as much as she could about the individuals,” said Lomax.</p><br><br>
 
-    <p>In the end she and one of her son’s killers met face to face. Slowly the two formed a relationship, a pathway to understanding. She says he “showed me so much compassion and remorse, I could do nothing but forgive him.” She now speaks to lifers at the prison.</p><br><br>
+    <p>In the end she and one of her son’s killers met face to face. Slowly the two formed a relationship, a pathway to understanding. Lomax said she told him he “showed me so much compassion and remorse, I could do nothing but forgive him.” She now speaks to lifers at the prison.</p><br><br>
 
     <p>“It allowed her to begin to start healing,” Lomax said. ”She began to see lifers as human beings as opposed to monsters who’ve committed a hideous crime.”</p><br><br>
 
