--- a/pennsylvania.html
+++ b/pennsylvania.html
@@ -132,7 +132,7 @@
 
     <p>Because Baynes was a juvenile and his parents weren’t present when police questioned him, he received a new trial in 1976. That time, his earlier statement to the police, which Baynes alleges he was physically coerced to write, was excluded from trial.</p><br><br>
 
-    <p>But Baynes was again convicted and committed to an adult penitentiary,condemned to die in prison. &quot;I was really petrified,&quot; he said. </p><br><br>
+    <p>But Baynes was again convicted and committed to an adult penitentiary, condemned to die in prison. &quot;I was really petrified,&quot; he said. </p><br><br>
 
     <p>Baynes was just one of Pennsylvania’s 521 juveniles sentenced to mandatory life without parole for crimes committed before age 18.</p><br><br>
 
@@ -211,19 +211,7 @@
 
     <p>The <span style="font-style: italic;">Montgomery</span> decision prompted more changes to Pennsylvania’s procedural requirements in juvenile cases.</p><br><br>
 
-    <p>In 2017, Pennsylvania’s Supreme Court declared in Commonwealth v. Batts that to impose a sentence of life without parole, the state must prove that a juvenile offender is &quot;permanently incorrigible and that rehabilitation would be impossible.&quot;</p><br><br>
-
-
-      <p class="pullquote">
-        <span style="font-size: 1.7em; color: #D9B269;">&quot;</span>&nbsp;
-
-        <span>Rare and uncommon has to mean something.</span>
-
-        <span style="font-size: 1.7em;color: #D9B269;">&quot;</span>&nbsp;
-
-        <br><span class="attribution"> &mdash; Marsha Levick, Juvenile Law Center<span>
-
-      </p><br><br>
+    <p>In 2017, Pennsylvania’s Supreme Court declared in <span style="font-style: italic;">Commonwealth v. Batts</span> that to impose a sentence of life without parole, the state must prove that a juvenile offender is &quot;permanently incorrigible and that rehabilitation would be impossible.&quot;</p><br><br>
 
 
     <p>&quot;When you place the burden on the prosecutor, it is going to be harder to impose life without parole,&quot; said Levick, who argued before the court on behalf of defendant Qu’eed Batts. &quot;Rare and uncommon has to mean something.&quot; </p><br><br>
