--- a/pennsylvania.html
+++ b/pennsylvania.html
@@ -186,7 +186,7 @@
 
     <p>After Baynes was arrested, his father &mdash; unable to afford bail &mdash; mortgaged his home to hire a private attorney. Baynes was convicted after refusing to take a plea deal for 12½ to 25 years in exchange for testifying against his co-defendant.</p><br><br>
 
-    <p>Baynes said his father called every week and visited every month. &quot;We built a bond.&quot;</p><br><br>
+    <p>Baynes said his father called every week and visited every month. &quot;We built this bond.&quot;</p><br><br>
 
     <p>On December 22, 2016, at age 59, Baynes was resentenced to 30 years to life. He became eligible for parole, receiving credit for time served. </p><br><br>
 
@@ -322,7 +322,7 @@
 
     <p>&quot;Everyone devoted significant resources toward resolving those cases, and it was only through the cooperation of all the parties that we’ve managed to very successfully [do so],&quot; public defender Bridge added.</p><br><br>
 
-    <p>In three years 209 Pennsylvania juvenile lifers have been released, according to the Pennsylvania Department of Corrections data analyzed by the University of Maryland’s Howard Center for Investigative Journalism and the Capital News Service.</p><br><br>
+    <p>In three years 210 Pennsylvania juvenile lifers have been released, according to Pennsylvania Department of Corrections data analyzed by the University of Maryland’s Howard Center for Investigative Journalism and Capital News Service.</p><br><br>
 
     <p>Only 15 juvenile lifers have been resentenced to life without parole and 216 received  sentences for a specific number of years. </p><br><br>
 
