--- a/glendening-effect.html
+++ b/glendening-effect.html
@@ -122,15 +122,16 @@
   <a name="story"><div class="container"></a><br><br>
 
   <!-- Author and date -->
+   <p class="headline">For Maryland’s juvenile lifers, the hope of leaving prison emerges</p><br>
     <p class="author">By <span>HANNAH GASKILL</span></p>
     <p class="date">NOVEMBER 4, 2019</p><br><br>
 
   <!-- Article Body -->
     <p class="dateline">ANNAPOLIS, Maryland &mdash; For two decades Maryland governors have followed a tough-on-crime policy that denied parole to youths who had been sentenced to life. Gov. Larry Hogan is now softening that policy, allowing parole for three inmates convicted as juveniles.</p><br><br>
 
-    <p>Hogan’s shift comes in the face of U.S. Supreme Court rulings that sentencing a minor to life without parole was cruel and unusual punishment. The Democratic governor who initiated the policy of denying parole to anyone sentenced to life now calls it “a very bad mistake." And Hogan, R, is facing a federal lawsuit brought by the ACLU charging that the practice is unconstitutional. </p><br><br>
+    <p>Hogan’s shift comes in the face of U.S. Supreme Court rulings that sentencing a minor to life without parole was cruel and unusual punishment. The Democratic governor who initiated the policy of denying parole to anyone sentenced to life now calls it &quot;a very bad mistake.&quot; And Hogan, R, is facing a federal lawsuit brought by the ACLU charging that the practice is unconstitutional. </p><br><br>
 
-    <p>Juveniles in Maryland had been receiving life sentences with the possibility of parole as early as 11 years into the sentence. But because four consecutive governors had refused to release them, today more than 300 such inmates — some now in their 50s and 60s — sit waiting to see what Hogan’s decision on the three paroles means for them.</p><br><br>
+    <p>Juveniles in Maryland had been receiving life sentences with the possibility of parole as early as 11 years into the sentence. But because four consecutive governors had refused to release them, today more than 300 such inmates &mdash; some now in their 50s and 60s &mdash; sit waiting to see what Hogan’s decision on the three paroles means for them.</p><br><br>
 
     <!-- Second graphic container-->
         <div class="incarceration-graph"><br>
@@ -146,21 +147,21 @@
 
     <p>Hogan declined an interview request.</p><br><br>
 
-    <p>Chris Mincher, the deputy legal counsel for the governor’s office, told Capital News Service that Hogan “talked about this issue in his original campaign, and it’s something that he gives serious attention to.’’</p><br><br>
+    <p>Chris Mincher, the deputy legal counsel for the governor’s office, told Capital News Service that Hogan &quot;talked about this issue in his original campaign, and it’s something that he gives serious attention to.&quot;</p><br><br>
 
     <p>All three men granted parole by Hogan already have left prison, state corrections officials said.</p><br><br>
 
-    <p>Robert Davis, 54, had served 37 years for first-degree felony murder and handgun charges. Navarus Mayhew, 42, served 24 years for first-degree murder, robbery and gun charges.  And Shawn Delco Goodman, 42, served 27 years for first-degree murder and robbery charges, according to Maryland Parole Commission records.</p><br><br>
+    <p>Robert Davis, 54, had served 37 years for first-degree felony murder and handgun charges. Navarus Mayhew, 42, served 24 years for first-degree murder, robbery and gun charges. And Shawn Delco Goodman, 42, served 27 years for first-degree murder and robbery charges, according to Maryland Parole Commission records.</p><br><br>
 
     <p>The families of their victims could not be reached for comment on the releases.</p><br><br>
 
     <p>Hogan approved paroles for two of the men and allowed Davis’ to happen without his signature. </p><br><br>
 
-    <p>Until the Hogan administration, parole hadn’t been implemented for any lifer — adult or juvenile — since Gov. William Donald Schaefer, D, Glendening’s immediate predecessor. A number of inmates’ life sentences had been commuted, however.</p><br><br>
+    <p>Until the Hogan administration, parole hadn’t been implemented for any lifer &mdash; adult or juvenile &mdash; since Gov. William Donald Schaefer, D, Glendening’s immediate predecessor. A number of inmates’ life sentences had been commuted, however.</p><br><br>
 
     <p>Glendening now regrets that decision and has publicly and repeatedly advocated a change in state law to remove the governor from the parole process. </p><br><br>
 
-    <p>“I made a mistake,” he said in a recent interview with “PBS NewsHour” correspondent John Yang. “It was a very bad mistake in the sense that it impacted people, it impacted subsequent administrations, but it was a mistake. And I think it's important to acknowledge.”</p><br><br>
+    <p>&quot;I made a mistake,&quot; he said in a recent interview with “PBS NewsHour” correspondent John Yang. &quot;It was a very bad mistake in the sense that it impacted people, it impacted subsequent administrations, but it was a mistake. And I think it's important to acknowledge.&quot;</p><br><br>
 
     <div class="video-content">
       <div class="embed-responsive embed-responsive-16by9">
@@ -170,11 +171,11 @@
     </div><br><br>
 
 
-    <p>In the 2012 U.S. Supreme Court case Miller v. Alabama, sentencing a minor to life without the possibility of parole was deemed cruel and unusual. A 2016 suit, Montgomery v. Louisiana, declared that the 2012 ruling be applied retroactively, effectively eliminating the sentence for juveniles.</p><br><br>
+    <p>In the 2012 U.S. Supreme Court case <span style="font-style: italic;">Miller v. Alabama</span>, sentencing a minor to life without the possibility of parole was deemed cruel and unusual. A 2016 suit, <span style="font-style: italic;">Montgomery v. Louisiana</span>, declared that the 2012 ruling be applied retroactively, effectively eliminating the sentence for juveniles.</p><br><br>
 
     <p>In 2016, the ACLU of Maryland filed a federal class action lawsuit against Hogan on behalf of the Maryland Restorative Justice Initiative and three incarcerated juvenile lifers. The three juvenile lifers in the ACLU suit are not the 2019 parolees.</p><br><br>
 
-    <p>The state had argued that gubernatorial commutations — executive orders to shorten a sentence — over the years had met the Supreme Court’s standard. But advocates said commutations are more like winning the lottery than earning parole.</p><br><br>
+    <p>The state had argued that gubernatorial commutations &mdash; executive orders to shorten a sentence &mdash; over the years had met the Supreme Court’s standard. But advocates said commutations are more like winning the lottery than earning parole.</p><br><br>
 
     <!-- Third graphic container-->
         <div class="incarceration-graph"><br>
@@ -188,15 +189,15 @@
         </div>
         </div><br><br>
 
-    <p>The lawsuit states that Maryland’s process of juvenile lifer parole denied “meaningful opportunity for release,” therefore violating constitutional protections against cruel and unusual punishment.</p><br><br>
+    <p>The lawsuit states that Maryland’s process of juvenile lifer parole denied &quot;meaningful opportunity for release,&quot; therefore violating constitutional protections against cruel and unusual punishment.</p><br><br>
 
-    <p>“More than 300 people in Maryland are serving parole-eligible life sentences for offenses committed as children,” ACLU Maryland attorney Sonia Kumar said in a press release. “After holding nearly 200 parole hearings prompted by a lawsuit filed by juvenile lifers wrongly denied release, Maryland is paroling three people. During the same period, Pennsylvania has paroled nearly 200.”</p><br><br>
+    <p>&quot;More than 300 people in Maryland are serving parole-eligible life sentences for offenses committed as children,&quot; ACLU Maryland attorney Sonia Kumar said in a press release. &quot;After holding nearly 200 parole hearings prompted by a lawsuit filed by juvenile lifers wrongly denied release, Maryland is paroling three people. During the same period, Pennsylvania has paroled nearly 200.&quot;</p><br><br>
 
     <p>The ACLU suit is pending. </p><br><br>
 
-    <p>Maryland is one of only three states that requires a governor’s signature to grant parole in the case of life sentences.  until the 1990s, when rising crime rates spurred more stringent policies and public demonization of prisoners.</p><br><br>
+    <p>Maryland is one of only three states that requires a governor’s signature to grant parole in the case of life sentences. Until the 1990s, when rising crime rates spurred more stringent policies and public demonization of prisoners.</p><br><br>
 
-    <p>Crime and punishment became hot issues in Maryland in 1993, when “model inmate” Rodney Stokes — on work release, the last step before parole — killed his former girlfriend and himself.</p><br><br>
+    <p>Crime and punishment became hot issues in Maryland in 1993, when &quot;model inmate&quot; Rodney Stokes &mdash; on work release, the last step before parole &mdash; killed his former girlfriend and himself.</p><br><br>
 
     <!-- first graphic container-->
     <div class="incarceration-graph"><br>
@@ -218,11 +219,11 @@
 
     <p>Maryland legislators have tried to remove the governor’s hand from the state’s parole process in recent years.</p><br><br>
 
-    <p>“Of all the powers you want, to be involved in that kind of decision is not one of them,” Glendening said. “The issues are too emotional and too political to put it on the desk of someone who is going to turn around in a few months, a year and run for election. And it almost asks for political decisions on something that should not be political.”</p><br><br>
+    <p>&quot;Of all the powers you want, to be involved in that kind of decision is not one of them,&quot; Glendening said. &quot;The issues are too emotional and too political to put it on the desk of someone who is going to turn around in a few months, a year and run for election. And it almost asks for political decisions on something that should not be political.&quot;</p><br><br>
 
     <p>In 2017, parole reform legislation that would dismiss the governor from the process was passed in the state House of Delegates, but failed to advance in the Maryland Senate. This past session, a similar bill made little headway in either chamber. </p><br><br>
 
-    <p>State lawmakers are turning their eyes to 2020 — some with the hope that more advancement could be made this time around.</p><br><br>
+    <p>State lawmakers are turning their eyes to 2020 &mdash; some with the hope that more advancement could be made this time around.</p><br><br>
 
     <p>The bill’s former House sponsor, Delegate Pam Queen, D-Montgomery, said in an interview with Capital News Service in October that there are plans for similar legislation in the upcoming session, and is looking to the Senate and its new president, Bill Ferguson, D-Baltimore, to determine what will or won’t make it through.</p><br><br>
 
