--- a/lomax.html
+++ b/lomax.html
@@ -130,7 +130,7 @@
 
     <p>Walter Lomax can see parole from both sides. During his 38 years of wrongful incarceration on a murder charge he lost both his younger brother and a grandson to murder in Baltimore.</p><br><br>
 
-    <p>“I am in a unique position because I have the benefit of having lost someone, but also have met so many people who’ve committed those crimes,” Lomax said</p><br><br>
+    <p>&quot;I am in a unique position because I have the benefit of having lost someone, but also have met so many people who’ve committed those crimes,&quot; Lomax said</p><br><br>
 
     <p>The U.S. Supreme Court has recognized different standards for juveniles in light of their immaturity, vulnerability and changeability.</p><br><br>
 
@@ -145,15 +145,15 @@
 
     </p><br><br>
 
-    <p>“What I was able to do is observe some of the people who were incarcerated who weren’t the same people that they were when they committed the crime,” he said.</p><br><br>
+    <p>&quot;What I was able to do is observe some of the people who were incarcerated who weren’t the same people that they were when they committed the crime,&quot; he said.</p><br><br>
 
     <p>Now, Lomax works to help others gain a similar perspective. He has met with the mothers of murder victims and has cultivated many friendships with them. But what one mother did is what he thinks could help many others.</p><br><br>
 
-    <p>She wanted to understand why the killer did what he did. “She had no idea why the individuals had murdered her son, but she took a leap of faith and tried to find out as much as she could about the individuals,” said Lomax.</p><br><br>
+    <p>Ginger Dukes Beal wanted to understand why the killer did what he did. &quot;She had no idea why the individuals had murdered her son, but she took a leap of faith and tried to find out as much as she could about the individuals,&quot; said Lomax.</p><br><br>
 
-    <p>In the end she and one of her son’s killers met face to face. Slowly the two formed a relationship, a pathway to understanding. Lomax said she told him he “showed me so much compassion and remorse, I could do nothing but forgive him.” She now speaks to lifers at the prison.</p><br><br>
+    <p>In the end, Beal and one of her son’s killers met face to face. Slowly the two formed a relationship, a pathway to understanding. She told a prisoner advocacy group that her son’s killer &quot;showed me so much compassion and remorse, I could do nothing but forgive him.&quot; She now speaks to lifers at the prison.</p><br><br>
 
-    <p>“It allowed her to begin to start healing,” Lomax said. ”She began to see lifers as human beings as opposed to monsters who’ve committed a hideous crime.”</p><br><br>
+    <p>&quot;It allowed her to begin to start healing,&quot; Lomax said. &quot;She began to see lifers as human beings as opposed to monsters who’ve committed a hideous crime.&quot;</p><br><br>
 
     <p>Lomax believes that, like that mother, victim’s families can come to see the perpetrators as victims themselves. He describes them as victims of the environment they grew up in, environments which often promoted their violent behavior.</p><br><br>
 
