--- a/index.html
+++ b/index.html
@@ -289,22 +289,22 @@
 </div><br><br><!-- END Main Container -->
 
 <div class="row row-sponsor2">
-  
- <div class="col-md-4 row-sponsor"><img src="images/howard-center-logo.png" class="sponsor" id="hc"  alt="Howard Center for Investigative Journalism logo"></div>
 
- <div class="col-md-4 row-sponsor"><img src="images/cns.png" class="sponsor" id="cns" alt="Capital News Service logo"></div>
+ <div class="col-md-4 row-sponsor"><img src="images/hc.png" class="sponsor" id="hc"  alt="Howard Center for Investigative Journalism logo"></div>
 
- <div class="col-md-4 row-sponsor"><img src="images/pbs-logo.png" class="sponsor" id="pbs" alt="PBS Newshour logo"></div>
+ <div class="col-md-4 row-sponsor"><img src="images/cns-black.png" class="sponsor" id="cns" alt="Capital News Service logo"></div>
+
+ <div class="col-md-4 row-sponsor"><img src="images/newshour.png" class="sponsor" id="pbs" alt="PBS Newshour logo"></div>
 
 </div>
 
 <div class="row row-sponsor2">
 
- <div class="col-md-4 row-sponsor"><img src="images/scripps-howard-foundation.png" class="sponsor" id="shf"  alt="Scripps Horward Foundation logo"></div>
+ <div class="col-md-4 row-sponsor"><img src="images/shf1.png" class="sponsor" id="shf"  alt="Scripps Horward Foundation logo"></div>
 
- <div class="col-md-4 row-sponsor"><img src="images/acf.png" class="sponsor" id="acf" alt="Annie E. Casey Foundation logo"></div>
+ <div class="col-md-4 row-sponsor"><img src="images/acf1.png" class="sponsor" id="acf" alt="Annie E. Casey Foundation logo"></div>
 
- <div class="col-md-4 row-sponsor"><img src="images/merrill2.png" class="sponsor" id="merrill" alt="Philip Merrill College of Journalism logo"></div>
+ <div class="col-md-4 row-sponsor"><img src="images/merrill.png" class="sponsor" id="merrill" alt="Philip Merrill College of Journalism logo"></div>
 
 </div>
 
