--- a/index.html
+++ b/index.html
@@ -290,21 +290,21 @@
 
 <div class="row row-sponsor2">
 
- <div class="col-md-4 row-sponsor"><img src="images/hc.png" class="sponsor" id="hc"  alt="Howard Center for Investigative Journalism logo"></div>
+ <div class="col-md-4 row-sponsor"><img src="images/howard-center-logo.png" class="sponsor" id="hc"  alt="Howard Center for Investigative Journalism logo"></div>
 
- <div class="col-md-4 row-sponsor"><img src="images/cns-black.png" class="sponsor" id="cns" alt="Capital News Service logo"></div>
+ <div class="col-md-4 row-sponsor"><img src="images/cns-short1.png" class="sponsor" id="cns" alt="Capital News Service logo"></div>
 
- <div class="col-md-4 row-sponsor"><img src="images/newshour.png" class="sponsor" id="pbs" alt="PBS Newshour logo"></div>
+ <div class="col-md-4 row-sponsor"><img src="images/pbs-short.png" class="sponsor" id="pbs" alt="PBS Newshour logo"></div>
 
 </div>
 
 <div class="row row-sponsor2">
 
- <div class="col-md-4 row-sponsor"><img src="images/shf1.png" class="sponsor" id="shf"  alt="Scripps Horward Foundation logo"></div>
+ <div class="col-md-4 row-sponsor"><img src="images/shf-short.png" class="sponsor" id="shf"  alt="Scripps Horward Foundation logo"></div>
 
- <div class="col-md-4 row-sponsor"><img src="images/acf1.png" class="sponsor" id="acf" alt="Annie E. Casey Foundation logo"></div>
+ <div class="col-md-4 row-sponsor"><img src="images/acf-short.png" class="sponsor" id="acf" alt="Annie E. Casey Foundation logo"></div>
 
- <div class="col-md-4 row-sponsor"><img src="images/merrill.png" class="sponsor" id="merrill" alt="Philip Merrill College of Journalism logo"></div>
+ <div class="col-md-4 row-sponsor"><img src="images/merrill-short.png" class="sponsor" id="merrill" alt="Philip Merrill College of Journalism logo"></div>
 
 </div>
 
