--- a/pennsylvania.html
+++ b/pennsylvania.html
@@ -439,7 +439,7 @@
 
     <p class="photo-caption">Joseph Baynes with his public defender Helen Levin, one of the three co-chairs of the JLWOP unit. (Photo by Camila Velloso | Capital News Service)</p><br><br>
 
-    <p>&quot;It's an incredibly important moment in justice reform in this country because the successful reintegration of these individuals should force us to rethink our whole kind of justice paradigm,&quot; Levick said.</p><br><br>
+    <p>&quot;It's an incredibly important moment in justice reform in this country because the successful reintegration of these individuals should force us to rethink our whole justice paradigm,&quot; Levick said.</p><br><br>
 
     <p>She pointed to the shrinking footprint of juvenile incarceration as a sign of progress. The Marshall Project reported an 82 percent drop in juveniles held in adult prisons since 1997.</p><br><br>
 
