--- a/glendening-effect.html
+++ b/glendening-effect.html
@@ -261,7 +261,15 @@
     <p class="end-gold" style="color: #D9B269; font-size: 1.5em;">About This Project</p><br>
 
     <p class="about">This work is a collaboration between the University of Maryland's Howard Center for Investigative Journalism and Capital News Service and the PBS NewsHour.
-    </p><br>
+    </p><br><br>
+
+    <div class="row sponsor-row">
+      <div class="col-md-4"><img src="images/sponsor-hc.png" class="sponsor" id="hc"  alt="Howard Center for Investigative Journalism logo"></div>
+
+      <div class="col-md-4"><img src="images/sponsor-cns.png" class="sponsor" id="cns" alt="Capital News Service logo"></div>
+
+      <div class="col-md-4"><img src="images/sponsor-pbs.png" class="sponsor" id="pbs" alt="PBS Newshour logo"></div>
+    </div><br>
 
     <p class="end-gold" style="color: #D9B269; font-size: 1.5em;">Credits</p><br>
 
@@ -279,27 +287,15 @@
     <p class="end-gold" style="color: #D9B269; font-size: 1.5em;">Funders</p><br>
       <p class="about">Support for this project comes from generous grants from the Scripps Howard Foundation, the Annie E. Casey Foundation and the University of Maryland’s Philip Merrill College of Journalism. </p><br><br>
 
+      <div class="row sponsor-row">
+        <div class="col-md-4"><img src="images/sponsor-scripps.png" class="sponsor" id="shf"  alt="Scripps Horward Foundation logo"></div>
+
+        <div class="col-md-4"><img src="images/sponsor-acf.png" class="sponsor" id="acf" alt="Annie E. Casey Foundation logo"></div>
+
+        <div class="col-md-4"><img src="images/sponsor-merrill.png" class="sponsor" id="merrill" alt="Philip Merrill College of Journalism logo"></div>
+      </div><br>
+
 </div><br><br>
-</div>
-
-<div class="row row-sponsor2">
-
- <div class="col-md-4 row-sponsor"><img src="images/howard-center-logo.png" class="sponsor" id="hc"  alt="Howard Center for Investigative Journalism logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/cns.png" class="sponsor" id="cns" alt="Capital News Service logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/pbs-logo.png" class="sponsor" id="pbs" alt="PBS Newshour logo"></div>
-
-</div>
-
-<div class="row row-sponsor2">
-
- <div class="col-md-4 row-sponsor"><img src="images/scripps-howard-foundation.png" class="sponsor" id="shf"  alt="Scripps Horward Foundation logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/acf.png" class="sponsor" id="acf" alt="Annie E. Casey Foundation logo"></div>
-
- <div class="col-md-4 row-sponsor"><img src="images/merrill2.png" class="sponsor" id="merrill" alt="Philip Merrill College of Journalism logo"></div>
-
 </div>
 
 <!-- Branding disappears on scroll-->
